--- a/index.html
+++ b/index.html
@@ -13,31 +13,28 @@
     <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
       <ul id="incomplete-list">
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
+        <div class="list-row">
+            <li>TODOです</li>
+              <button>完了</button>
+              <button>削除</button>
+            </li>
+        </div>
+        <div class="list-row">
+          <li>TODOです</li>
             <button>完了</button>
             <button>削除</button>
-          </div>
-        </li>
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
+          </li>
+      </div>
       </ul>
     </div>
     <div class="complete-area">
       <p class="title">完了したTODO</p>
-      <ul>
-        <li>
-          <div class="list-row">
-            <p>TODOでした</p>
+      <ul id="complete-list">
+        <div class="list-row">
+          <li>TODOです</li>
             <button>戻す</button>
-          </div>
-        </li>
+          </li>
+      </div>
       </ul>
     </div>
 
